[package]
name = "warp_oauth2"
version = "0.1.3"
authors = ["Jan Algermissen <algermissen@acm.org>"]
edition = "2018"
license = "Apache-2.0"
description = "Filters and more to work with oauth2 in warp projects."
documentation = "https://docs.rs/warp_oauth2/0.1.1"
repository = "https://github.com/tc1io/warp-oauth2"
homepage = "https://github.com/tc1io/warp-oauth2"

[dependencies]
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonwebtoken = "7.2.0"
futures = "0.3.7"
http = "0.2"
warp = "0.3.0"
headers = "0.3.3"
